[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mdsite"
version = "0.1.0"
description = "Zero-config CLI that turns a folder of Markdown files into a clean static HTML site."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["markdown", "static-site-generator", "ssg", "cli", "offline"]
dependencies = [
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "linkify-it-py>=2.0",
    "python-frontmatter>=1.1",
    "Pygments>=2.17",
    "watchdog>=4.0",
]

[project.scripts]
mdsite = "mdsite.cli:_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mdsite = ["templates/*"]
